--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://joeratt.github.io/react-gh-pages",
   "name": "react-gh-pages",
   "version": "0.1.0",
   "private": true,
@@ -7,12 +8,15 @@
     "react-dom": "^16.6.3"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
